; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_aq_get_phy_register.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_aq_get_phy_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40e_hw = type { i32 }
%struct.i40e_asq_cmd_details = type { i32 }
%struct.i40e_aq_desc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.i40e_aqc_phy_register_access = type { i32, i32, i8*, i8* }

@i40e_aqc_opc_get_phy_register = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i40e_aq_get_phy_register(%struct.i40e_hw* %0, i8* %1, i8* %2, i32 %3, i32* %4, %struct.i40e_asq_cmd_details* %5) #0 {
  %7 = alloca %struct.i40e_hw*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.i40e_asq_cmd_details*, align 8
  %13 = alloca %struct.i40e_aq_desc, align 4
  %14 = alloca %struct.i40e_aqc_phy_register_access*, align 8
  %15 = alloca i32, align 4
  store %struct.i40e_hw* %0, %struct.i40e_hw** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store %struct.i40e_asq_cmd_details* %5, %struct.i40e_asq_cmd_details** %12, align 8
  %16 = getelementptr inbounds %struct.i40e_aq_desc, %struct.i40e_aq_desc* %13, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = bitcast i32* %17 to %struct.i40e_aqc_phy_register_access*
  store %struct.i40e_aqc_phy_register_access* %18, %struct.i40e_aqc_phy_register_access** %14, align 8
  %19 = load i32, i32* @i40e_aqc_opc_get_phy_register, align 4
  %20 = call i32 @i40e_fill_default_direct_cmd_desc(%struct.i40e_aq_desc* %13, i32 %19)
  %21 = load i8*, i8** %8, align 8
  %22 = load %struct.i40e_aqc_phy_register_access*, %struct.i40e_aqc_phy_register_access** %14, align 8
  %23 = getelementptr inbounds %struct.i40e_aqc_phy_register_access, %struct.i40e_aqc_phy_register_access* %22, i32 0, i32 3
  store i8* %21, i8** %23, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = load %struct.i40e_aqc_phy_register_access*, %struct.i40e_aqc_phy_register_access** %14, align 8
  %26 = getelementptr inbounds %struct.i40e_aqc_phy_register_access, %struct.i40e_aqc_phy_register_access* %25, i32 0, i32 2
  store i8* %24, i8** %26, align 8
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @CPU_TO_LE32(i32 %27)
  %29 = load %struct.i40e_aqc_phy_register_access*, %struct.i40e_aqc_phy_register_access** %14, align 8
  %30 = getelementptr inbounds %struct.i40e_aqc_phy_register_access, %struct.i40e_aqc_phy_register_access* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load %struct.i40e_hw*, %struct.i40e_hw** %7, align 8
  %32 = load %struct.i40e_asq_cmd_details*, %struct.i40e_asq_cmd_details** %12, align 8
  %33 = call i32 @i40e_asq_send_command(%struct.i40e_hw* %31, %struct.i40e_aq_desc* %13, i32* null, i32 0, %struct.i40e_asq_cmd_details* %32)
  store i32 %33, i32* %15, align 4
  %34 = load i32, i32* %15, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %42, label %36

36:                                               ; preds = %6
  %37 = load %struct.i40e_aqc_phy_register_access*, %struct.i40e_aqc_phy_register_access** %14, align 8
  %38 = getelementptr inbounds %struct.i40e_aqc_phy_register_access, %struct.i40e_aqc_phy_register_access* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = call i32 @LE32_TO_CPU(i32 %39)
  %41 = load i32*, i32** %11, align 8
  store i32 %40, i32* %41, align 4
  br label %42

42:                                               ; preds = %36, %6
  %43 = load i32, i32* %15, align 4
  ret i32 %43
}

declare dso_local i32 @i40e_fill_default_direct_cmd_desc(%struct.i40e_aq_desc*, i32) #1

declare dso_local i32 @CPU_TO_LE32(i32) #1

declare dso_local i32 @i40e_asq_send_command(%struct.i40e_hw*, %struct.i40e_aq_desc*, i32*, i32, %struct.i40e_asq_cmd_details*) #1

declare dso_local i32 @LE32_TO_CPU(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
